Added pill indicator.

--- a/jquery-carousel/index.html
+++ b/jquery-carousel/index.html
@@ -24,6 +24,18 @@
         </ul>
       </div>
       <input type="image" src="images/carousel-right.png" id="right" />
-    <div>
+    </div>
+    <div id="pills" class="floated">
+       <span class="active pill"></span>
+       <span class="inactive pill"></span>
+       <span class="inactive pill"></span>
+       <span class="inactive pill"></span>
+       <span class="inactive pill"></span>
+       <span class="inactive pill"></span>
+       <span class="inactive pill"></span>
+       <span class="inactive pill"></span>
+       <span class="inactive pill"></span>
+       <span class="inactive pill"></span>
+    </div>
   </body>
 </html>
