Eclipse static web project format.

--- a/jquery-carousel/WebContent/index.html
+++ b/jquery-carousel/WebContent/index.html
@@ -37,5 +37,9 @@
        <span class="inactive pill"></span>
        <span class="inactive pill"></span>
     </div>
+    <div id="fullSizeFrame" class="floated">
+      <img id="fullSizePhoto" src="images/full/IMG_0046.JPG" />
+      <input type="image" src="images/close.png" id="fullSizeClose" />
+    </div>
   </body>
 </html>
